[package]
name = "cyoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "2.3.1"
serde-aux = "4.1.2"
leptos = "0.2.1"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
reqwasm = "0.5.0"
anyhow = "1.0.58"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys ="0.3"
